--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "bootstrap": "^5.3.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
+    "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
