--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"@types/react-dom": "^18.2.13",
 		"axios": "^1.5.1",
 		"bootstrap": "^5.3.2",
+		"i18next": "^23.6.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^13.3.1",
 		"react-modal": "^3.16.1",
 		"react-router-dom": "^6.17.0",
 		"react-scripts": "^3.0.1",
