--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^1.5.1",
 		"bootstrap": "^5.3.2",
 		"i18next": "^23.6.0",
+		"json-server-auth": "^2.1.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
@@ -31,7 +32,8 @@
 		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"json-server": "json-server -p 8000 ./public/db.json -m ./node_modules/json-server-auth"
 	},
 	"eslintConfig": {
 		"extends": [
