--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"json-server": "json-server -p 8000 ./public/db.json -m ./node_modules/json-server-auth"
+		"json-server": "json-server -p 8000 ../db.json -m ./node_modules/json-server-auth"
 	},
 	"eslintConfig": {
 		"extends": [
